force-app/main/default/objects/Integration_Metadata__mdt/fields/Authorization_Token__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Token__c</fullName>
    <label>Authorization Token</label>
    <type>TextArea</type>
</CustomField>