force-app/main/default/objects/Integration_Metadata__mdt/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <label>email</label>
    <length>155</length>
    <type>Text</type>
</CustomField>