force-app/main/default/objects/Integration_Metadata__mdt/fields/Method_Type__c.field-meta.xml
<CustomField>
    <fullName>Method_Type__c</fullName>
    <label>Method Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>