force-app/main/default/objects/Integration_Metadata__mdt/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>155</length>
    <type>Text</type>
</CustomField>