force-app/main/default/objects/Integration_Metadata__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <label>Timeout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>